# inmarket-news-intelligence-agent

./: .gitignore  PROMPTS.md  README.md
agent/: .env.example  README.md  requirements.txt
agent/app/: __init__.py  config.py  errors.py  executor.py  main.py  mcp_client.py  middleware.py  tools.py
agent/app/models/: __init__.py  requests.py  responses.py  tool_inputs.py
agent/app/routes/: __init__.py  chat.py  health.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
mcp-server/: README.md  pyproject.toml
mcp-server/app/: __init__.py  config.py  errors.py  main.py  middleware.py
mcp-server/app/models/: requests.py  responses.py
mcp-server/app/routes/: __init__.py  health.py  news.py
mcp-server/app/services/: __init__.py  news_service.py
